First round of windsurf inspired commits.

--- a/app/templates/admin/schedule.html
+++ b/app/templates/admin/schedule.html
@@ -8,7 +8,7 @@
         <div class="col-md-12">
             <h1>
                 <i class="fas fa-calendar-alt me-2"></i>Flight Schedule
-                <a href="{{ url_for('booking.book') }}" class="btn btn-primary float-end">
+                <a href="{{ url_for('booking.create_booking') }}" class="btn btn-primary float-end">
                     <i class="fas fa-plus me-1"></i>Add Booking
                 </a>
             </h1>
